# Vinox3d

./: .gitignore  Cargo.toml  LICENSE  README.md
bevy_mod_edge_detection/src/: edge_detection.wgsl
vinox-client/: Cargo.toml
vinox-client/assets/: base_player.bbmodel  base_player.gltf  crosshair.aseprite  hands.gltf
vinox-client/assets/biomes/crystal/: crystal.ron
vinox-client/assets/biomes/ignis/: ignis.ron
vinox-client/assets/biomes/overgrown/: overgrown.ron
vinox-client/assets/biomes/sand/: sand.ron
vinox-client/assets/biomes/stone/: stone.ron
vinox-client/assets/blocks/air/: air.ron
vinox-client/assets/blocks/andesite/: andesite.ron
vinox-client/assets/blocks/cobblestone/: cobblestone.ron
vinox-client/assets/blocks/diorite/: diorite.ron
vinox-client/assets/blocks/dirt/: dirt.ron
vinox-client/assets/blocks/glass/: glass.ron
vinox-client/assets/blocks/granite/: granite.ron
vinox-client/assets/blocks/grass/: grass.ron
vinox-client/assets/blocks/gravel/: gravel.ron
vinox-client/assets/blocks/ignis/: ignis.ron
vinox-client/assets/blocks/light/: light.ron
vinox-client/assets/blocks/limestone/: limestone.ron
vinox-client/assets/blocks/lunox/: lunox.ron
vinox-client/assets/blocks/marble/: marble.ron
vinox-client/assets/blocks/mirg/: mirg.ron
vinox-client/assets/blocks/oak_log/: oak_log.ron
vinox-client/assets/blocks/obsidian/: obsidian.ron
vinox-client/assets/blocks/pole/: pole.ron
vinox-client/assets/blocks/pole_test/: pole_test.ron
vinox-client/assets/blocks/root/: root.ron
vinox-client/assets/blocks/sand/: sand.ron
vinox-client/assets/blocks/slate/: slate.ron
vinox-client/assets/blocks/stone/: stone.ron
vinox-client/assets/blocks/water/: water.ron
vinox-client/assets/blocks/worley/: worley.ron
vinox-client/assets/blocks/xoniv/: xoniv.ron
vinox-client/assets/geometry/block/: block.ron
vinox-client/assets/geometry/border_block/: border_block.ron
vinox-client/assets/geometry/cross/: cross.ron
vinox-client/assets/geometry/divot/: divot.ron
vinox-client/assets/geometry/fence/: fence.ron
vinox-client/assets/geometry/flat/: flat.ron
vinox-client/assets/geometry/pole/: pole.ron
vinox-client/assets/geometry/slab/: slab.ron
vinox-client/assets/geometry/stair/: stair.ron
vinox-client/assets/items/root_pickaxe/: root_pickaxe.ron
vinox-client/assets/items/shovel/: shovel.ron
vinox-client/assets/recipes/cobblestone/: cobblestone.ron
vinox-client/assets/recipes/glass/: glass.ron
vinox-client/assets/recipes/granite/: granite.ron
vinox-client/assets/recipes/light/: light.ron
vinox-client/assets/recipes/lunox/: lunox.ron
vinox-client/assets/recipes/mirg/: mirg.ron
vinox-client/assets/recipes/oak_log/: oak_log.ron
vinox-client/assets/recipes/pole/: pole.ron
vinox-client/assets/recipes/pole_test/: pole_test.ron
vinox-client/assets/recipes/root_pickaxe/: root_pickaxe.ron
vinox-client/assets/recipes/sand/: sand.ron
vinox-client/assets/recipes/shovel/: shovel.ron
vinox-client/assets/recipes/xoniv/: xoniv.ron
vinox-client/assets/shaders/: basic_material.wgsl
vinox-client/src/: main.rs
vinox-client/src/states/: components.rs  mod.rs
vinox-client/src/states/assets/: load.rs
vinox-client/src/states/game/: mod.rs  plugin.rs
vinox-client/src/states/game/input/: mod.rs  player.rs  plugin.rs
vinox-client/src/states/game/networking/: components.rs  mod.rs  plugin.rs  syncing.rs
vinox-client/src/states/game/rendering/: chunk.rs  meshing.rs  mod.rs  plugin.rs
vinox-client/src/states/game/rendering/debugging/: mod.rs
vinox-client/src/states/game/rendering/debugging/collision_boxes/: plugin.rs
vinox-client/src/states/game/ui/: crafting.rs  debug.rs  dropdown.rs  inventory.rs  mod.rs  plugin.rs
vinox-client/src/states/game/world/: chunks.rs
vinox-client/src/states/loading/: mod.rs  plugin.rs  ui.rs
vinox-client/src/states/menu/: plugin.rs  ui.rs
vinox-common/: Cargo.toml
vinox-common/src/: lib.rs
vinox-common/src/collision/: aabb.rs  mod.rs  raycast.rs
vinox-common/src/ecs/: bundles.rs
vinox-common/src/networking/: protocol.rs
vinox-common/src/physics/: mod.rs  plugin.rs  simulate.rs
vinox-common/src/physics/collision/: aabb.rs  mod.rs  raycast.rs
vinox-common/src/scripting/: mod.rs
vinox-common/src/storage/: mod.rs
vinox-common/src/storage/biomes/: descriptor.rs  load.rs
vinox-common/src/storage/blocks/: descriptor.rs  load.rs
vinox-common/src/storage/crafting/: descriptor.rs  load.rs
vinox-common/src/storage/feature_rules/: descriptor.rs
vinox-common/src/storage/features/: descriptor.rs
vinox-common/src/storage/geometry/: descriptor.rs  load.rs
vinox-common/src/storage/items/: descriptor.rs  load.rs
vinox-common/src/storage/structures/: descriptor.rs  mod.rs
vinox-common/src/world/: mod.rs
vinox-common/src/world/chunks/: ecs.rs  light.rs  mod.rs  positions.rs  storage.rs
vinox-generation/: Cargo.toml
vinox-mesher/: Cargo.toml
vinox-mesher/src/: chunk_boundary.rs  lib.rs  mesh.rs
vinox-server/: Cargo.toml
vinox-server/src/: lib.rs  main.rs
vinox-server/src/game/: mod.rs  plugin.rs
vinox-server/src/game/networking/: components.rs  mod.rs  plugin.rs  start.rs  syncing.rs
vinox-server/src/game/world/: chunk.rs  generation.rs  mod.rs  storage.rs
