[workspace]
members = [
  "vinox-client",
  "vinox-server",
  "vinox-common",
]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.0" 
bevy_quinnet = "0.4.0"
bincode = "1.3.3"
directories = "4.0.1"
mlua = { version = "0.8.7", features = ["lua54", "vendored", "serialize"] }
ron = "0.8.0"
rusqlite = {version="0.28.0", features=["bundled"]}
serde = "1.0.154"
walkdir = "2.3.2"
bimap = {version="0.6.2", features=["serde"]}
itertools = "0.10.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = false #Change this to be per platform windows doesn't seem to like it
