[package]
name = "vinox-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bevy_quinnet.workspace=true
bincode.workspace=true
serde.workspace=true
bevy_egui = "0.20.0"
directories.workspace=true
vinox-common = {path="../vinox-common"}
serde-big-array = "0.5.1"
itertools.workspace=true
bevy_tweening = "0.7.0"
futures-lite = "1.12.0"
copy_dir = "0.1.2"
rand.workspace=true
zstd.workspace=true
bevy_spectator = {version="0.2.0", default-features=false}
