[package]
name = "vinox-client"
version = "0.1.0"
edition = "2021"
default-run = "vinox-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bevy_quinnet.workspace=true
bincode.workspace=true
serde.workspace=true
bevy_egui = "0.20.0"
directories.workspace=true
vinox-common = {path="../vinox-common"}
vinox-server = {path="../vinox-server"}
serde-big-array = "0.5.1"
itertools.workspace=true
bevy_tweening = "0.7.0"
futures-lite = "1.12.0"
copy_dir = "0.1.2"
rand.workspace=true
zstd.workspace=true
tokio.workspace=true
brigadier_rs.workspace=true 
egui-notify = "0.6.0"
leafwing-input-manager = "0.9.1"
ron.workspace=true
fs_extra = "1.3.0"
bimap.workspace=true
fuzzy-matcher = "0.3.7"
rustc-hash = "1.1.0"
ndshape.workspace=true
bevy_mod_mipmap_generator={git="https://github.com/DGriffin91/bevy_mod_mipmap_generator"}
egui_extras = "0.21.0"
big_space.workspace=true
bevy_mod_debugdump = "0.7.0"
argon2.workspace=true
load_file = "1.0.1"
bevy_mod_edge_detection = {path="../bevy_mod_edge_detection"}
bevy_atmosphere = "0.6.0"
