[package]
name = "vinox-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bevy_quinnet.workspace=true
bimap.workspace=true
ron.workspace = true
directories.workspace = true
serde.workspace = true
bincode.workspace = true
walkdir.workspace = true
strum = {version="0.24.1", features=["derive"]}
serde-big-array = "0.5.1"
itertools.workspace = true
rustc_data_structures.workspace=true
rustc-hash = "1.1.0"
