[package]
name = "vinox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bincode.workspace=true
serde.workspace=true
rusqlite.workspace=true
zstd.workspace=true
vinox-common = {path="../vinox-common"}
