[package]
name = "vinox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bevy_quinnet.workspace=true
bincode.workspace=true
serde.workspace=true
rusqlite.workspace=true
zstd.workspace=true
rand.workspace=true
vinox-common = {path="../vinox-common"}
rustc_data_structures.workspace=true
futures-lite = "1.12.0"
bracket-noise = "~0.8"
