[package]
name = "vinox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
bevy_quinnet.workspace=true
bincode.workspace=true
serde.workspace=true
rusqlite.workspace=true
zstd.workspace=true
rand.workspace=true
vinox-common = {path="../vinox-common"}
rustc_data_structures.workspace=true
directories.workspace=true
futures-lite = "1.12.0"
noise = "0.8.2"
tokio.workspace=true
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
fs_extra = "1.3.0"
ron.workspace=true
bracket-noise = "0.8.7"
big_space.workspace=true
